# wannaplay

./: Cargo.toml  README.md
src/: api.rs  lib.rs
src/client/: main.rs
src/server/: main.rs
test/: hey.txt
test/folder/: bin_file
